vuejs/vuejs-tests/testData/highlighting/multipleScriptTagsInVue/multipleScriptTagsInVue.vue
<style>
div {
  color: aqua;
}
</style>

<style>
div {
  color: aqua;
}
</style>

<<warning descr="Duplicated top-level tag script">script</warning>>
  const i = 12;
</script>

<<warning descr="Duplicated top-level tag script">script</warning>>
  const i = 12;
</script>

<<warning descr="Duplicated top-level tag template">template</warning>>
  <div></div>
  <div></div>
</template>

<<warning descr="Duplicated top-level tag template">template</warning>>
  <div></div>
  <error descr="Vue: Element is missing end tag."></error><div>
<error descr="Element div is not closed"><</error>/template>
